seaqt/QtCore/gen_qloggingcategory.h

class QLoggingCategory;
typedef struct QLoggingCategory QLoggingCategory;
QLoggingCategory* QLoggingCategory_new(const char* category);
bool QLoggingCategory_isDebugEnabled(const QLoggingCategory* self);
bool QLoggingCategory_isInfoEnabled(const QLoggingCategory* self);
bool QLoggingCategory_isWarningEnabled(const QLoggingCategory* self);
bool QLoggingCategory_isCriticalEnabled(const QLoggingCategory* self);
const char* QLoggingCategory_categoryName(const QLoggingCategory* self);
QLoggingCategory* QLoggingCategory_operatorCall(QLoggingCategory* self);
QLoggingCategory* QLoggingCategory_operatorCall2(const QLoggingCategory* self);
QLoggingCategory* QLoggingCategory_defaultCategory();
void QLoggingCategory_setFilterRules(struct miqt_string rules);